--- a/index.html
+++ b/index.html
@@ -25,7 +25,78 @@
 		<article>
 			<h2>Coding Semantic and Accessible Forms!</h2>
 			<p>Today we'll be focusing on coding a form that is accessible and semantic, and we'll also briefly discuss skip links for your website. Forms can be a source of frustration for users, whether they specifically need help with accessing your website or if they just prefer that your forms be easy to use and submit. Follow along as we code this in class, and please ask questions as they arise. Let's make a form!</p>
-
+			<form action="https://wp.zybooks.com/form-viewer.php" method="post">
+				<label for="name">Full Name<span class="required">*</span></label>
+				<input type="text" id="name" name="name">
+				<label for="email">Email<span class="required">*</span></label>
+				<input type="email" id="email" name="email">
+				<label for="number">Phone Number<span class="required">*</span></label>
+				<input type="number" id="number" name="number">
+				<fieldset>
+					<legend>Preferred Contact Method<span class="required">*</span></legend>
+					<input type="radio" id="contactphone" name="contactphone">
+					<label for="contactphone">Phone</label>
+					<input type="radio" id="contactemail" name="contactemail">
+					<label for="contactemail">Email</label>
+				</fieldset>
+					<label for="state">State<span class="required">*</span></label>
+					<select id="state" name="state"><br>
+						<option value="" disabled selected>Select your state</option>
+						<option value="AL">AL - Alabama</option>
+						<option value="AK">AK - Alaska</option>
+						<option value="AZ">AZ - Arizona</option>
+						<option value="AR">AR- Arkansas</option>
+						<option value="CA">CA - California</option>
+						<option value="CO">CO - Colorado</option>
+						<option value="CT">CT - Connecticut</option>
+						<option value="DE">DE - Delaware</option>
+						<option value="FL">FL - Florida</option>
+						<option value="GA">GA - Georgia</option>
+						<option value="HI">HI - Hawaii</option>
+						<option value="ID">ID - Idaho</option>
+						<option value="IL">IL - Illinois</option>
+						<option value="IN">IN - Indiana</option>
+						<option value="IA">IA - Iowa</option>
+						<option value="KS">KS - Kansas</option>
+						<option value="KY">KY - Kentucky</option>
+						<option value="LA">LA - Louisiana</option>
+						<option value="ME">ME - Maine</option>
+						<option value="MD">MD - Maryland</option>
+						<option value="MA">MA - Massachusetts</option>
+						<option value="MI">MI - Michigan</option>
+						<option value="MN">MN - Minnesota</option>
+						<option value="MS">MS - Mississippi</option>
+						<option value="MO">MO - Missouri</option>
+						<option value="MT">MT - Montana</option>
+						<option value="NE">NE - Nebraska</option>
+						<option value="NV">NV - Nevada</option>
+						<option value="NH">NH - New Hampshire</option>
+						<option value="NJ">NJ - New Jersey</option>
+						<option value="NM">NM - New Mexico</option>
+						<option value="NY">NY - New York</option>
+						<option value="NC">NC - North Carolina</option>
+						<option value="ND">ND - North Dakota</option>
+						<option value="OH">OH - Ohio</option>
+						<option value="OK">OK - Oklahoma</option>
+						<option value="OR">OR - Oregon</option>
+						<option value="PA">PA - Pennsylvania</option>
+						<option value="RI">RI - Rhode Island</option>
+						<option value="SC">SC - South Carolina</option>
+						<option value="SD">SD - South Dakota</option>
+						<option value="TN">TN - Tennessee</option>
+						<option value="TX">TX - Texas</option>
+						<option value="UT">UT - Utah</option>
+						<option value="VT">VT - Vermont</option>
+						<option value="VA">VA - Virginia</option>
+						<option value="WA">WA - Washington</option>
+						<option value="WV">WV - West Virgina</option>
+						<option value="WI">WI - Wisconsin</option>
+						<option value="WY">WY - Wyoming</option>
+					</select>
+					<label for="comments">Additional Comments</label>
+					<textarea id="comments" name="comments"></textarea>
+					<input type="submit" name="submit">
+			</form>
 <!-- 	-------- TO-DO: ADD FORM CODE HERE DURING CLASS, FOLLOW ALONG TO COMPLETE -------- -->
 		</article>
 	</main>
